# gorn-mod-installer

./: CMakeLists.txt  README.md
mods/AnotherTimeMod/: README.txt
mods/ExtremeMod/: README.txt
mods/RecursiveMod/subdir/: something.txt
res/: resources.qrc
res/memeloader/: README.txt  loader.meme  uiobject.asset
src/: DownloadManager.cpp  DownloadManager.h  MemeLoaderInstaller.cpp  MemeLoaderInstaller.h  Registry.cpp  Registry.h  main.cpp
src/utils/: Fetcher.cpp  Fetcher.h  FileDownloader.cpp  FileDownloader.h  ModApi.cpp  ModApi.h  ModManager.cpp  ModManager.h  Registry.cpp  Registry.h  RepositoryApi.cpp  RepositoryApi.h
src/view/: MainWindow.cpp  MainWindow.h  ModsMainWindow.cpp  ModsMainWindow.h  ModsSelection.cpp  ModsSelection.h  PlatformSelection.cpp  PlatformSelection.h
